--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -5,4 +5,35 @@
 body{
     margin: 0;
     padding: 0;
+    background-color:rgb(214, 233, 251);
+    font-size: 15px;
+}
+.container-height{
+    min-height: calc(100vh - 70px);
+}
+
+ul,li{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.avatar-uploader .el-upload {
+    border: 1px dashed var(--el-border-color);
+    border-radius: 6px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition: var(--el-transition-duration-fast);
+}
+
+.avatar-uploader .el-upload:hover {
+    border-color: var(--el-color-primary);
+}
+
+.el-icon.avatar-uploader-icon {
+    font-size: 28px;
+    color: #8c939d;
+    width: 150px;
+    height: 150px;
+    text-align: center;
 }
